# lxd

./: .gitignore  CMakeLists.txt  README.md  main.cpp  smallvector.cpp  smallvector.h
benchmark/: CMakeLists.txt  fileio.cpp
src/: CMakeLists.txt  ascii.cpp  ascii.h  base64.cpp  base64.h  crypt.cpp  crypt.h  debug.h  defines.h  encoding.cpp  encoding.h  fileio.cpp  fileio.h  http.cpp  http.h  int128.cpp  int128.h  int128_no_intrinsic.inc  main.cpp  numbers.cpp  numbers.h  smallvector.h  timer.cpp  timer.h
test/: CMakeLists.txt  test_fileio.cpp  tst_smallvector.cpp
